
Interface changes (aside from moving header files around)
======================================================================


Make compute table interface easier to use for simple operations
    (i.e., most of the time)

(done!) Entry type registry within entry type class


Compute table entry types
    * should have a compute table
            + their own, for non-monolithic
            + the global one, for monolithic


    * eventually: remove CTs from operation base class
    * eventually: remove entry registration from operation base class


Monolithic vs per operation compute tables
    * Belong to CT interface instead of operation
    * Interface should be 'attach a CT to this entry type'
    * Do we want/need a registry of all CTs?

Operations:
    * Get rid of global operation registry in favor of global
      ct_entry_type registry, unless we can't?

Compute table ideas
    *   ct_vector   packing and unpacking operations
                    packing area is at most an unsigned long per item,
                    possibly plus one.

                    'none'
                        : just copy over
                    'type based'
                        : use slots of unsigned, each item (by type)
                          will use one or two slots
                    'value based'
                        : use slots of unsigned short, each item
                          will use 1-4 slots by value
                            0..2^16-1   1 slot
                             ..2^32-1   2 slots
                             ..2^48-1   3 slots
                             ..2^64-1   4 slots
                          but then we need 2 bits per item,
                          need to figure out where to store those.
                          Don't implement this yet but design
                          stuff so that adding this is not horrible.

        The packed version is what's stored, so we can check for
        equality very easily in the CT then