@@ -7,6 +7,7 @@ Make compute table interface easier to use for simple operations
     (i.e., most of the time)
 
 (done!) Entry type registry within entry type class
+(done!) Monolithic CT -> static in compute_table class
 
 
 Compute table entry types
